--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Avril — Proposer un mot</title>
+    <title>Avril — Générateur de mot</title>
     <meta name="description" content="Page simple qui propose un mot aléatoire depuis un fichier texte du dépôt." />
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%93%9D%3C/text%3E%3C/svg%3E" />
     <script src="https://cdn.tailwindcss.com"></script>
