Refactor index.html for improved layout and content
Updated the title and icon, modified the layout and sections for better user experience, and removed unused styles.

--- a/index.html
+++ b/index.html
@@ -1,322 +1,24 @@
 <!doctype html>
-<html lang="fr" class="h-full">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Avril — Mots & Nombres aléatoires</title>
-    <meta name="description" content="Proposer un mot aléatoire depuis un ou plusieurs fichiers texte et générer des nombres aléatoires (bornes inclusives)." />
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%8E%AF%3C/text%3E%3C/svg%3E" />
+    <title>Avril — accueil</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 100 100%27><text y=%270.9em%27 font-size=%2790%27>🎲</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      :root { --blur: 10px }
-      .glass { backdrop-filter: blur(var(--blur)); -webkit-backdrop-filter: blur(var(--blur)); background: rgba(255,255,255,0.6) }
-      .dark .glass { background: rgba(17,24,39,0.6) }
-      .btn { @apply px-4 py-2 rounded-2xl shadow hover:shadow-md transition font-medium; }
-      .btn-primary { @apply bg-indigo-600 text-white hover:bg-indigo-700; }
-      .btn-secondary { @apply bg-white text-gray-900 hover:bg-gray-100 border border-gray-200; }
-      .tag { @apply inline-flex items-center rounded-full bg-gray-100 px-2.5 py-0.5 text-sm font-medium text-gray-800; }
-      .tag button { @apply ml-2 text-gray-500 hover:text-red-600; }
-      code { @apply bg-black/5 px-1.5 py-0.5 rounded; }
-      input, select { @apply rounded-xl border border-gray-300 bg-white/70 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500; }
-      label { @apply block text-sm font-medium mb-1; }
-      .section-title { @apply text-xl font-semibold mb-3; }
-      details summary { @apply cursor-pointer select-none; }
-      .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
-    </style>
   </head>
-  <body class="min-h-full bg-gradient-to-br from-indigo-50 via-sky-50 to-emerald-50 dark:from-slate-900 dark:via-slate-900 dark:to-slate-800 text-slate-800 dark:text-slate-100">
-    <main class="mx-auto max-w-3xl p-6">
-      <header class="flex items-center justify-between mb-6">
-        <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight">Avril · Mots & Nombres</h1>
-        <button id="toggleTheme" class="btn btn-secondary" title="Basculer clair/sombre">🌓</button>
-      </header>
+  <body class="min-h-screen bg-gradient-to-br from-indigo-50 via-sky-50 to-emerald-50 text-slate-800">
+    <main class="mx-auto max-w-xl p-8 text-center">
+      <h1 class="text-4xl font-extrabold">Avril</h1>
+      <p class="mt-2 text-slate-600">Mini-jeux entre amis — GitHub Pages</p>
 
-      <!-- Section: Sélection des listes de mots -->
-      <section class="glass rounded-3xl p-6 shadow mb-6">
-        <h2 class="section-title">Listes de mots</h2>
-        <p class="text-sm text-gray-700 dark:text-gray-300 mb-4">
-          La page lit un ou plusieurs fichiers texte (un mot par ligne) situés <strong>à la racine</strong> du site, par exemple <code>mots.txt</code>, <code>animaux.txt</code>… La liste utilisée est la <strong>concaténation dédupliquée</strong> de tous les fichiers sélectionnés.
-        </p>
+      <div class="mt-8 grid gap-4">
+        <a href="./settings.html" class="block rounded-2xl bg-indigo-600 text-white px-6 py-4 text-lg font-semibold shadow hover:shadow-md">Paramètres</a>
+        <a href="./play.html" class="block rounded-2xl bg-white border px-6 py-4 text-lg font-semibold shadow hover:shadow-md">Proposer un jeu</a>
+      </div>
 
-        <div class="grid gap-4 md:grid-cols-3 items-end">
-          <div class="md:col-span-2">
-            <label for="fileInput">Ajouter un fichier (nom + extension)</label>
-            <input id="fileInput" placeholder="ex. mots.txt" />
-          </div>
-          <div>
-            <button id="addFile" class="btn btn-secondary w-full">Ajouter à la sélection</button>
-          </div>
-        </div>
-
-        <div class="mt-3">
-          <div class="text-sm font-medium mb-1">Fichiers sélectionnés</div>
-          <div id="fileChips" class="flex flex-wrap gap-2"></div>
-          <div class="mt-3 flex gap-2">
-            <button id="loadFiles" class="btn btn-primary">Charger les listes</button>
-            <button id="clearFiles" class="btn btn-secondary">Vider</button>
-          </div>
-        </div>
-
-        <div class="mt-4 flex flex-wrap items-center gap-2">
-          <span id="metaCount" class="tag hidden"></span>
-          <span id="metaFiles" class="tag hidden"></span>
-        </div>
-
-        <div id="zoneErreur" class="hidden mt-4 rounded-xl border border-red-300 bg-red-50 dark:bg-red-900/30 p-4 text-red-700 dark:text-red-300 text-sm"></div>
-      </section>
-
-      <!-- Section: Mots aléatoires -->
-      <section class="glass rounded-3xl p-6 shadow mb-6">
-        <h2 class="section-title">Proposer un mot</h2>
-        <div class="flex gap-3">
-          <button id="btnProposer" class="btn btn-primary" disabled>Proposer un mot</button>
-          <button id="btnCopier" class="btn btn-secondary" title="Copier le mot" disabled>Copier</button>
-        </div>
-        <div id="zoneMot" class="mt-6 rounded-3xl border border-gray-200 bg-white/70 dark:bg-slate-800/60 p-6 min-h-[120px] flex items-center justify-center text-center">
-          <span id="mot" class="text-3xl md:text-4xl font-bold select-text">—</span>
-        </div>
-      </section>
-
-      <!-- Section: Nombres aléatoires -->
-      <section class="glass rounded-3xl p-6 shadow">
-        <h2 class="section-title">Générateur de nombres</h2>
-        <div class="grid gap-4 md:grid-cols-3 items-end">
-          <div>
-            <label for="minInput">Borne min (incluse)</label>
-            <input id="minInput" type="number" placeholder="ex. 1" value="1" />
-          </div>
-          <div>
-            <label for="maxInput">Borne max (incluse)</label>
-            <input id="maxInput" type="number" placeholder="ex. 100" value="100" />
-          </div>
-          <div>
-            <button id="btnNombre" class="btn btn-primary w-full">Générer</button>
-          </div>
-        </div>
-        <div id="zoneNombre" class="mt-6 rounded-3xl border border-gray-200 bg-white/70 dark:bg-slate-800/60 p-6 min-h-[90px] flex items-center justify-center text-center">
-          <span id="nombre" class="text-3xl md:text-4xl font-bold select-text">—</span>
-        </div>
-        <div class="mt-3">
-          <button id="btnCopierNombre" class="btn btn-secondary" disabled>Copier</button>
-        </div>
-        <div id="zoneErreurNb" class="hidden mt-4 rounded-xl border border-red-300 bg-red-50 dark:bg-red-900/30 p-4 text-red-700 dark:text-red-300 text-sm"></div>
-      </section>
-
-      <details class="mt-8">
-        <summary class="text-sm text-gray-600">Voir les tests intégrés (console)</summary>
-        <div id="testsOut" class="mt-2 text-sm mono bg-black/5 rounded-xl p-3"></div>
-      </details>
-
-      <footer class="mt-10 text-center text-sm text-gray-500">
-        <p>Hébergé sur GitHub Pages · Placez vos fichiers à la racine (ex. <code>mots.txt</code>, <code>animaux.txt</code>).</p>
-      </footer>
+      <p class="mt-6 text-sm text-slate-500">Assure-toi d’avoir renseigné des fichiers <code>.txt</code> et coché des jeux dans Paramètres.</p>
     </main>
-
-    <script>
-      // ———————————————————————————————————————————
-      // Helpers de base
-      // ———————————————————————————————————————————
-      const $ = (id) => document.getElementById(id)
-      const toggleTheme = $('toggleTheme')
-      toggleTheme?.addEventListener('click', () => {
-        document.documentElement.classList.toggle('dark')
-        localStorage.setItem('avril_theme_dark', document.documentElement.classList.contains('dark') ? '1' : '0')
-      })
-      if (localStorage.getItem('avril_theme_dark') === '1') document.documentElement.classList.add('dark')
-
-      function escapeHtml(s){ return s?.toString().replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#039;'}[m])) }
-
-      function copyToClipboard(text, btn){
-        if (!text || text === '—') return
-        navigator.clipboard.writeText(text).then(() => {
-          const old = btn.textContent; btn.textContent = 'Copié !'
-          setTimeout(() => btn.textContent = old, 1200)
-        }).catch(() => { showError('Impossible de copier automatiquement.') })
-      }
-
-      // ———————————————————————————————————————————
-      // Éléments UI — mots
-      // ———————————————————————————————————————————
-      const fileInput  = $('fileInput')
-      const addFile    = $('addFile')
-      const fileChips  = $('fileChips')
-      const loadFiles  = $('loadFiles')
-      const clearFiles = $('clearFiles')
-      const metaCount  = $('metaCount')
-      const metaFiles  = $('metaFiles')
-      const zoneErreur = $('zoneErreur')
-      const btnProp    = $('btnProposer')
-      const btnCopier  = $('btnCopier')
-      const spanMot    = $('mot')
-
-      // ———————————————————————————————————————————
-      // Éléments UI — nombres
-      // ———————————————————————————————————————————
-      const minInput = $('minInput')
-      const maxInput = $('maxInput')
-      const btnNombre = $('btnNombre')
-      const spanNombre = $('nombre')
-      const btnCopierNombre = $('btnCopierNombre')
-      const zoneErreurNb = $('zoneErreurNb')
-
-      // ———————————————————————————————————————————
-      // État
-      // ———————————————————————————————————————————
-      const STATE = {
-        files: JSON.parse(localStorage.getItem('avril_files') || '[]'),
-        words: [],
-      }
-
-      // ———————————————————————————————————————————
-      // Gestion des fichiers sélectionnés
-      // ———————————————————————————————————————————
-      function renderFiles(){
-        fileChips.innerHTML = ''
-        STATE.files.forEach((name, idx) => {
-          const chip = document.createElement('span')
-          chip.className = 'tag group'
-          chip.innerHTML = `${escapeHtml(name)} <button title="Retirer" data-i="${idx}">✕</button>`
-          fileChips.appendChild(chip)
-        })
-        fileChips.querySelectorAll('button').forEach(btn => btn.addEventListener('click', () => {
-          const i = parseInt(btn.dataset.i, 10)
-          STATE.files.splice(i,1)
-          persistFiles(); renderFiles()
-        }))
-        metaFiles.classList.toggle('hidden', STATE.files.length === 0)
-        metaFiles.textContent = STATE.files.length ? (STATE.files.length + ' fichier' + (STATE.files.length>1?'s':'')) : ''
-      }
-      function persistFiles(){ localStorage.setItem('avril_files', JSON.stringify(STATE.files)) }
-
-      addFile.addEventListener('click', () => {
-        const val = (fileInput.value || '').trim()
-        if (!val) return
-        if (!/\.(txt)$/i.test(val)) { showError('Le nom de fichier doit se terminer par .txt'); return }
-        if (!STATE.files.includes(val)) STATE.files.push(val)
-        fileInput.value = ''
-        persistFiles(); renderFiles()
-      })
-      fileInput.addEventListener('keydown', (e) => { if (e.key === 'Enter') addFile.click() })
-
-      clearFiles.addEventListener('click', () => { STATE.files = []; persistFiles(); renderFiles(); resetWords() })
-
-      loadFiles.addEventListener('click', chargerListes)
-
-      // ———————————————————————————————————————————
-      // Parsing d'un fichier de mots (une ligne = un mot)
-      // Gère \n, \r\n et \r. Ignore lignes vides et celles commençant par '#'.
-      // ———————————————————————————————————————————
-      function parseWordFile(text){
-        return text
-          .split(/\r?\n|\r/g)          // ✅ regex correcte (pas d'espace/retour chariot dans le littéral)
-          .map(l => l.trim())
-          .filter(l => l.length > 0 && !l.startsWith('#'))
-      }
-
-      // ———————————————————————————————————————————
-      // Chargement & concaténation des listes
-      // ———————————————————————————————————————————
-      async function chargerListes(){
-        resetWords()
-        if (!STATE.files.length) { showError('Aucun fichier sélectionné. Ajoutez au moins un fichier (ex. mots.txt).'); return }
-        const all = []
-        const errors = []
-        for (const name of STATE.files){
-          try {
-            const url = './' + name + '?v=' + Date.now()
-            const res = await fetch(url, { cache: 'no-store' })
-            if (!res.ok) throw new Error(`${name}: ${res.status}`)
-            const txt = await res.text()
-            const arr = parseWordFile(txt)
-            all.push(...arr)
-          } catch (e) {
-            errors.push(`• ${name} — ${e.message}`)
-          }
-        }
-        const unique = Array.from(new Set(all))
-        STATE.words = unique
-        metaCount.textContent = unique.length + ' mot' + (unique.length>1?'s':'')
-        metaCount.classList.remove('hidden')
-        btnProp.disabled = unique.length === 0
-        btnCopier.disabled = unique.length === 0
-        if (errors.length) showError('Certains fichiers n\'ont pas pu être chargés:\n' + errors.join('\n'))
-        else hideError()
-      }
-
-      function resetWords(){ STATE.words = []; metaCount.classList.add('hidden'); spanMot.textContent = '—'; btnProp.disabled = true; btnCopier.disabled = true }
-
-      // ———————————————————————————————————————————
-      // Actions: proposer un mot / copier
-      // ———————————————————————————————————————————
-      btnProp.addEventListener('click', () => {
-        if (!STATE.words.length) { showError('Aucun mot chargé.'); return }
-        const i = Math.floor(Math.random() * STATE.words.length)
-        const mot = STATE.words[i]
-        spanMot.textContent = mot
-        btnCopier.disabled = false
-      })
-      btnCopier.addEventListener('click', () => copyToClipboard(spanMot.textContent, btnCopier))
-
-      // ———————————————————————————————————————————
-      // Générateur de nombres (bornes inclusives)
-      // ———————————————————————————————————————————
-      btnNombre.addEventListener('click', () => {
-        hideErrorNb()
-        const min = parseInt(minInput.value, 10)
-        const max = parseInt(maxInput.value, 10)
-        if (Number.isNaN(min) || Number.isNaN(max)) return showErrorNb('Veuillez saisir des nombres valides.')
-        if (min > max) return showErrorNb('La borne min doit être ≤ à la borne max.')
-        const n = min + Math.floor(Math.random() * (max - min + 1))
-        spanNombre.textContent = String(n)
-        btnCopierNombre.disabled = false
-      })
-      btnCopierNombre.addEventListener('click', () => copyToClipboard(spanNombre.textContent, btnCopierNombre))
-
-      function showError(msg){ zoneErreur.textContent = msg; zoneErreur.classList.remove('hidden') }
-      function hideError(){ zoneErreur.classList.add('hidden'); zoneErreur.textContent = '' }
-      function showErrorNb(msg){ zoneErreurNb.textContent = msg; zoneErreurNb.classList.remove('hidden') }
-      function hideErrorNb(){ zoneErreurNb.classList.add('hidden'); zoneErreurNb.textContent = '' }
-
-      // ———————————————————————————————————————————
-      // Tests intégrés (affichés dans la console et dans <details>)
-      // ———————————————————————————————————————————
-      function runTests(){
-        const out = []
-        const eq = (name, a, b) => {
-          const ok = JSON.stringify(a) === JSON.stringify(b)
-          const icon = ok ? '✅' : '❌'
-          const line = `${icon} ${name} — ${ok ? 'OK' : 'KO'}${ok ? '' : `\n   attendu: ${JSON.stringify(b)}\n   obtenu:  ${JSON.stringify(a)}`}`
-          console[ok ? 'log' : 'error']('[TEST]', line)
-          out.push(line)
-        }
-
-        // Test 1: LF
-        eq('parse LF (\\n)', parseWordFile('a\nb\n#c\n\n d  '), ['a','b','d'])
-        // Test 2: CRLF
-        eq('parse CRLF (\\r\\n)', parseWordFile('x\r\ny\r\n#z\r\n\r\n foo '), ['x','y','foo'])
-        // Test 3: CR seul (anciens Mac)
-        eq('parse CR (\\r)', parseWordFile('m\rn\r#o\r\r p '), ['m','n','p'])
-        // Test 4: déduplication multi-fichiers
-        const dedup = Array.from(new Set(['pomme','banane','pomme','poire']))
-        eq('dédup multi-fichiers', dedup, ['pomme','banane','poire'])
-        // Test 5: nombres inclusifs
-        const min=2,max=3; const many = new Set(Array.from({length:200},()=>min+Math.floor(Math.random()*(max-min+1))))
-        eq('bornes inclusives [2,3]', Array.from(many).sort(), [2,3])
-
-        const box = $('testsOut'); if (box) box.textContent = out.join('\n')
-      }
-
-      // ———————————————————————————————————————————
-      // Boot
-      // ———————————————————————————————————————————
-      document.addEventListener('DOMContentLoaded', () => {
-        if (!STATE.files.length) { STATE.files = ['mots.txt']; persistFiles() }
-        renderFiles()
-        runTests() // lance les tests
-        // Tentative de chargement immédiat
-        chargerListes()
-      })
-    </script>
   </body>
 </html>
 
