--- a/settings.html
+++ b/settings.html
@@ -1,92 +1,84 @@
 <!doctype html>
+<html lang="fr">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Avril — Paramètres</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+:root { --blur: 10px }
+.glass { backdrop-filter: blur(var(--blur)); -webkit-backdrop-filter: blur(var(--blur)); background: rgba(255,255,255,0.6) }
+.tag { display:inline-flex; align-items:center; gap:.4rem; padding:.15rem .6rem; border-radius:9999px; background:#eef; }
+code { background: #0002; padding: 0 .3rem; border-radius: .3rem; }
+.mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace }
+</style>
+</head>
+<body class="min-h-screen bg-gradient-to-br from-indigo-50 via-sky-50 to-emerald-50 text-slate-800">
+<main class="mx-auto max-w-3xl p-6">
+<header class="flex items-center justify-between mb-6">
+<h1 class="text-3xl font-extrabold">Paramètres</h1>
+<nav class="text-sm flex gap-3">
+<a href="./index.html" class="underline">Accueil</a>
+<a href="./play.html" class="underline">Proposer un jeu →</a>
+</nav>
+</header>
+
+
+<section class="glass rounded-3xl p-6 shadow mb-6">
+<h2 class="text-xl font-semibold mb-2">Fichiers de mots</h2>
+<p class="text-sm mb-3">Place des fichiers <code>.txt</code> à la racine (une ligne = un mot). Ajoute-les ci-dessous, <strong>charge</strong>, puis vérifie les totaux.</p>
+<div class="grid gap-3 md:grid-cols-3 items-end">
+<div class="md:col-span-2">
+<label class="block text-sm font-medium mb-1">Nom du fichier</label>
+<input id="fileInput" class="w-full rounded-xl border border-gray-300 px-3 py-2" placeholder="ex. mots.txt" />
+</div>
+<button id="addFile" class="px-4 py-2 rounded-2xl bg-white border shadow">Ajouter</button>
+</div>
+<div id="fileChips" class="mt-3 flex flex-wrap gap-2"></div>
+<div class="mt-3 flex gap-2">
+<button id="loadFiles" class="px-4 py-2 rounded-2xl bg-indigo-600 text-white shadow">Charger</button>
+<button id="clearFiles" class="px-4 py-2 rounded-2xl bg-white border shadow">Vider</button>
+</div>
+<div class="mt-4 flex flex-wrap gap-2 text-sm">
+<span id="metaCount" class="tag hidden"></span>
+<span id="metaFiles" class="tag hidden"></span>
+</div>
+<pre id="errors" class="mt-3 text-sm text-red-700 whitespace-pre-wrap"></pre>
+</section>
+
+
+<section class="glass rounded-3xl p-6 shadow">
 <h2 class="text-xl font-semibold mb-2">Jeux disponibles</h2>
 <p class="text-sm mb-3">Provenant de <code>games.json</code>. Coche ceux que tu veux inclure dans le tirage aléatoire.</p>
 <div id="gamesList" class="space-y-3"></div>
+<pre id="gamesErrors" class="mt-3 text-sm text-red-700 whitespace-pre-wrap"></pre>
 </section>
 </main>
 
 
 <script>
+// Tout le code est désormais exécuté **après** que le DOM est prêt,
+// pour éviter les `...addEventListener of null` si un élément manque
+document.addEventListener('DOMContentLoaded', () => {
 const $ = (id) => document.getElementById(id)
-const fileInput = $('fileInput'); const addFile = $('addFile')
-const fileChips = $('fileChips'); const loadFiles = $('loadFiles'); const clearFiles = $('clearFiles')
-const metaCount = $('metaCount'); const metaFiles = $('metaFiles'); const errors = $('errors')
+const req = ['fileInput','addFile','fileChips','loadFiles','clearFiles','metaCount','metaFiles','errors','gamesList','gamesErrors']
+const missing = req.filter(id => !$(id))
+if (missing.length) {
+console.error('[settings] éléments introuvables:', missing)
+// On ne throw pas — la page reste utilisable en partie
+}
+
+
+const fileInput = $('fileInput')
+const addFile = $('addFile')
+const fileChips = $('fileChips')
+const loadFiles = $('loadFiles')
+const clearFiles = $('clearFiles')
+const metaCount = $('metaCount')
+const metaFiles = $('metaFiles')
+const errors = $('errors')
 const gamesList = $('gamesList')
-const STATE = { files: JSON.parse(localStorage.getItem('avril_files')||'[]'), words: [] }
+const gamesErrors = $('gamesErrors')
 
 
-function persistFiles(){ localStorage.setItem('avril_files', JSON.stringify(STATE.files)) }
-function renderFiles(){
-fileChips.innerHTML = ''
-STATE.files.forEach((name, i) => {
-const span = document.createElement('span'); span.className='tag'
-span.innerHTML = `<span class="mono">${name}</span> <button data-i="${i}" title="Retirer">✕</button>`
-fileChips.appendChild(span)
-})
-fileChips.querySelectorAll('button').forEach(b=>b.addEventListener('click',()=>{STATE.files.splice(parseInt(b.dataset.i,10),1);persistFiles();renderFiles()}))
-metaFiles.classList.toggle('hidden', STATE.files.length===0)
-metaFiles.textContent = STATE.files.length? STATE.files.length+` fichier${STATE.files.length>1?'s':''}`:''
-}
-
-
-addFile.addEventListener('click',()=>{
-const v=(fileInput.value||'').trim(); if(!v) return
-if(!/\.(txt)$/i.test(v)){ errors.textContent='Le nom doit finir par .txt'; return }
-errors.textContent=''
-if(!STATE.files.includes(v)) STATE.files.push(v); fileInput.value=''; persistFiles(); renderFiles()
-})
-fileInput.addEventListener('keydown',e=>{ if(e.key==='Enter') addFile.click() })
-clearFiles.addEventListener('click',()=>{ STATE.files=[]; persistFiles(); renderFiles(); metaCount.classList.add('hidden') })
-
-
-function parseWordFile(text){
-return text.split(/\r?\n|\r/g).map(l=>l.trim()).filter(l=>l && !l.startsWith('#'))
-}
-async function chargerListes(){
-errors.textContent=''; STATE.words=[]
-if(!STATE.files.length){ errors.textContent='Aucun fichier sélectionné.'; return }
-const all=[]; const errs=[]
-for(const name of STATE.files){
-try{
-const res=await fetch('./'+name+'?v='+Date.now(),{cache:'no-store'})
-if(!res.ok) throw new Error(res.status)
-const txt=await res.text(); all.push(...parseWordFile(txt))
-}catch(e){ errs.push(`• ${name} — ${e.message}`) }
-}
-const unique=Array.from(new Set(all)); STATE.words=unique
-metaCount.textContent = unique.length+` mot${unique.length>1?'s':''}`; metaCount.classList.remove('hidden')
-errors.textContent = errs.join('\n')
-}
-loadFiles.addEventListener('click', chargerListes)
-
-
-// Jeux
-function persistGames(sel){ localStorage.setItem('avril_games', JSON.stringify(sel)) }
-async function loadGames(){
-const res=await fetch('./games.json?v='+Date.now()); const games=await res.json()
-const selected = new Set(JSON.parse(localStorage.getItem('avril_games')||'[]'))
-gamesList.innerHTML=''
-games.forEach(g=>{
-const id='g_'+g.id
-const wrap=document.createElement('label'); wrap.className='block p-3 rounded-2xl border bg-white/70'
-wrap.innerHTML=`<div class="flex items-start gap-3">
-<input id="${id}" type="checkbox" class="mt-1" ${selected.has(g.id)?'checked':''}>
-<div>
-<div class="font-semibold">${g.name}</div>
-<div class="text-sm text-slate-600">${g.description}</div>
-<div class="text-xs mt-1 text-slate-500">Besoin : <code>${g.needs}</code>${g.defaultMin!=null?` · min=${g.defaultMin}`:''}${g.defaultMax!=null?` · max=${g.defaultMax}`:''}</div>
-</div>
-</div>`
-gamesList.appendChild(wrap)
-wrap.querySelector('input').addEventListener('change',()=>{
-if(wrap.querySelector('input').checked) selected.add(g.id); else selected.delete(g.id)
-persistGames(Array.from(selected))
-})
-})
-}
-
-
-document.addEventListener('DOMContentLoaded', ()=>{ if(!STATE.files.length){ STATE.files=['mots.txt']; persistFiles() } renderFiles(); loadGames() })
-</script>
-</body>
 </html>
